server/app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require plugins.bundle
 *= require style.bundle
 */

:root {
  --global-background-color: #f6f7fa;
  --blue: #4b7be5;
  --subtle-gray: #f6f7fa;
  --gray: #6d6a94;
  --checkbox-gray: #e3e3e8;
}

@font-face {
  font-family: 'Mulish';
  src: local('Mulish'), url('Mulish-VariableFont_wght.ttf') format('truetype-variations');
  font-weight: 100 1000;
}

@font-face {
  font-family: 'MulishBold';
  src: local('MulishBold'), url('Mulish-Bold.ttf') format('truetype');
}

@font-face {
  font-family: 'MulishSemiBold';
  src: local('MulishSemiBold'), url('Mulish-SemiBold.ttf') format('truetype');
}

* {
  font-family: Mulish, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  color: #110e4c;
  font-variation-settings: 'wght' 400;
  white-space: nowrap;
}

p {
  margin: 0;
  white-space: nowrap;
}

.application--main-container {
  height: 100vh;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  background-color: var(--global-background-color) !important;
  overflow: auto;
}

@media (max-width: 990px) {
  .application--main-container {
    flex-direction: column;
  }
}

.application--content-container {
  --full-width-sidebar-width: 260px;
  width: calc(100vw - var(--full-width-sidebar-width));
  max-width: 1200px;
  padding: 2rem 5rem;
  overflow-x: hidden;
  overflow-y: hidden;
  background-color: var(--global-background-color);
  margin-left: auto;
  margin-right: auto;
  position: relative;
  box-sizing: border-box;
}

@media (max-width: 1024px) {
  .application--content-container {
    width: calc(100vw - 92px);
    padding: 2rem 3rem;
    position: absolute;
    right: 0;
    margin-left: 0;
    margin-right: 0;
  }
}

@media (max-width: 990px) {
  .application--content-container {
    --responsive-header-height: 67px;

    width: 100vw;
    height: calc(100vh - var(--responsive-header-height));
    height: calc(100dvh - var(--responsive-header-height)); /* dynamic view height for mobile browsers safe area */
    padding: 2rem 1rem;
    top: var(--responsive-header-height);
    overflow-y: auto;
  }
}
  
.application--unsupported-browser-notice {
  width: 100vw;
  padding: 1rem;
  background-color: #ece5ac;
  color: black;
  text-align: center;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1000;
}

@media (max-width: 1200px) {
  .application--content-container {
    padding: 2rem 1rem;
  }
}

.form-custom-opaque {
  opacity: 0.4;
}

.cursor-pointer {
  cursor: pointer;
}

.hoverable:hover {
  opacity: 75%;
  cursor: pointer;
}

.right-0 {
  right: 0;
}

.toolbar {
  margin-bottom: 2rem;
}

.circle {
  border-radius: 50%;
}

.overflow-y-auto {
  overflow-y: auto;
}

.overflow-hidden {
  overflow: hidden;
}

.application--info-cell {
  width: max-content;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  gap: .375rem;

  .application--info-cell-subtitle {
    max-width: 30ch;
  }
}

@media (max-width: 450px) {
  .application--info-cell {
    max-width: 100%;

    .application--info-cell-subtitle {
      max-width: 100%;
    }
  }
}

.application--cell-icon-text-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

.application--speed-filters-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  gap: .5rem;
}

.application--speed-filter {
  text-decoration: none;
  padding: .25rem .75rem;
  background-color: var(--subtle-gray);
  font-size: 0.812rem;
  line-height: 1.25rem;
  letter-spacing: 0;
  color: var(--gray);
  border-radius: 6px;
  font-variation-settings: 'wght' 700;
}

.application--speed-filter.selected {
  background-color: var(--blue);
  color: white;
}

@media (max-width: 1200px) {
  .application--speed-filter {
    display: none;
    visibility: hidden;
  }
}

.application--speed-filters-dropdown {
  display: none !important;
  visibility: hidden !important;
}

@media (max-width: 1200px) {
  .application--speed-filters-dropdown {
    display: block !important;
    visibility: visible !important;
  }
}

.application--card-with-header-content-container.select2.select2-container.select2-container--bootstrap5 {
  display: none !important;
  visibility: hidden !important; 
}

@media (max-width: 1200px) {
  .application--card-with-header-content-container.select2.select2-container.select2-container--bootstrap5 {
    display: block !important;
    visibility: visible !important;
  }
}

.application--speed-cells-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  gap: .75rem;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  flex-wrap: wrap;
  flex-grow: 1;
}

.application--speed-cell {
  min-width: 200px;
  border: solid 1px var(--checkbox-gray);
  border-radius: .5rem;
  padding: 1rem;
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.application--speed-cell-title {
  max-width: 100%;
}

